--- a/presentations/compagnons-2018/index.html
+++ b/presentations/compagnons-2018/index.html
@@ -6,18 +6,18 @@
 
 		<title>reveal.js</title>
 
-		<link rel="stylesheet" href="/revealjs-lib/css/reveal.css">
-		<link rel="stylesheet" href="/revealjs-lib/css/theme/solarized.css">
+		<link rel="stylesheet" href="../../revealjs-lib/css/reveal.css">
+		<link rel="stylesheet" href="../../revealjs-lib/css/theme/solarized.css">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="/revealjs-lib/lib/css/zenburn.css">
+		<link rel="stylesheet" href="../../revealjs-lib/lib/css/zenburn.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
 			link.rel = 'stylesheet';
 			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? '/revealjs-lib/css/print/pdf.css' : '/revealjs-lib/css/print/paper.css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? '../../revealjs-lib/css/print/pdf.css' : '../../revealjs-lib/css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
 	</head>
@@ -29,8 +29,8 @@
 		</div>
 
 
-	<script src="/revealjs-lib/lib/js/head.min.js"></script>
-		<script src="/revealjs-lib/js/reveal.js"></script>
+	<script src="../../revealjs-lib/lib/js/head.min.js"></script>
+		<script src="../../revealjs-lib/js/reveal.js"></script>
 
 		<script>
 			// More info about config & dependencies:
@@ -38,10 +38,10 @@
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
 				dependencies: [
-					{ src: '/revealjs-lib/plugin/markdown/marked.js' },
-					{ src: '/revealjs-lib/plugin/markdown/markdown.js' },
-					{ src: '/revealjs-lib/plugin/notes/notes.js', async: true },
-					{ src: '/revealjs-lib/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+					{ src: '../../revealjs-lib/plugin/markdown/marked.js' },
+					{ src: '../../revealjs-lib/plugin/markdown/markdown.js' },
+					{ src: '../../revealjs-lib/plugin/notes/notes.js', async: true },
+					{ src: '../../revealjs-lib/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
 				]
 			});
 		</script>
