--- a/presentations/sample/index.html
+++ b/presentations/sample/index.html
@@ -1,49 +1,49 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+	<title>reveal.js</title>
 
-		<link rel="stylesheet" href="/revealjs-lib/css/reveal.css">
-		<link rel="stylesheet" href="/revealjs-lib/css/theme/solarized.css">
+	<link rel="stylesheet" href="../../revealjs-lib/css/reveal.css">
+	<link rel="stylesheet" href="../../revealjs-lib/css/theme/solarized.css">
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="/revealjs-lib/lib/css/zenburn.css">
+	<!-- Theme used for syntax highlighting of code -->
+	<link rel="stylesheet" href="../../revealjs-lib/lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? '/revealjs-lib/css/print/pdf.css' : '/revealjs-lib/css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section data-markdown="slides.md" data-separator="^%%%" data-separator-vertical="^%%"></section>
-			</div>
-		</div>
+	<!-- Printing and PDF exports -->
+	<script>
+        var link = document.createElement( 'link' );
+        link.rel = 'stylesheet';
+        link.type = 'text/css';
+        link.href = window.location.search.match( /print-pdf/gi ) ? '../../revealjs-lib/css/print/pdf.css' : '../../revealjs-lib/css/print/paper.css';
+        document.getElementsByTagName( 'head' )[0].appendChild( link );
+	</script>
+</head>
+<body>
+<div class="reveal">
+	<div class="slides">
+		<section data-markdown="slides.md" data-separator="^%%%" data-separator-vertical="^%%"></section>
+	</div>
+</div>
 
 
-	<script src="/revealjs-lib/lib/js/head.min.js"></script>
-		<script src="/revealjs-lib/js/reveal.js"></script>
+<script src="../../revealjs-lib/lib/js/head.min.js"></script>
+<script src="../../revealjs-lib/js/reveal.js"></script>
 
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				dependencies: [
-					{ src: '/revealjs-lib/plugin/markdown/marked.js' },
-					{ src: '/revealjs-lib/plugin/markdown/markdown.js' },
-					{ src: '/revealjs-lib/plugin/notes/notes.js', async: true },
-					{ src: '/revealjs-lib/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
-		</script>
-	</body>
+<script>
+    // More info about config & dependencies:
+    // - https://github.com/hakimel/reveal.js#configuration
+    // - https://github.com/hakimel/reveal.js#dependencies
+    Reveal.initialize({
+        dependencies: [
+            { src: '../../revealjs-lib/plugin/markdown/marked.js' },
+            { src: '../../revealjs-lib/plugin/markdown/markdown.js' },
+            { src: '../../revealjs-lib/plugin/notes/notes.js', async: true },
+            { src: '../../revealjs-lib/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+        ]
+    });
+</script>
+</body>
 </html>
