--- a/presentations/compagnons-2018/index.html
+++ b/presentations/compagnons-2018/index.html
@@ -8,6 +8,7 @@
 
 		<link rel="stylesheet" href="../../revealjs-lib/css/reveal.css">
 		<link rel="stylesheet" href="../../revealjs-lib/css/theme/solarized.css">
+		<link rel="stylesheet" href="slides.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="../../revealjs-lib/lib/css/zenburn.css">
@@ -28,8 +29,7 @@
 			</div>
 		</div>
 
-
-	<script src="../../revealjs-lib/lib/js/head.min.js"></script>
+		<script src="../../revealjs-lib/lib/js/head.min.js"></script>
 		<script src="../../revealjs-lib/js/reveal.js"></script>
 
 		<script>
